--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "postcss-preset-env": "^7.8.1",
     "posthtml-include": "^1.7.4",
     "rimraf": "^3.0.2",
-    "sharp": "^0.29.1"
+    "sharp": "^0.29.1",
+    "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1"
   }
 }
